# status_Bar

./: .gitignore  Cargo.toml  Makefile  README.md  Untitled.md  bar.toml  install.sh
crates/config/: Cargo.toml
crates/config/src/: lib.rs  schema.rs  watcher.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  event.rs  lib.rs  state.rs  widget.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/hyprland-ipc/: Cargo.toml
crates/hyprland-ipc/src/: client.rs  events.rs  lib.rs
crates/powermenu/: Cargo.toml
crates/powermenu/src/: main.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/system/: Cargo.toml
crates/system/src/: battery.rs  cpu.rs  lib.rs  memory.rs
crates/theme/: Cargo.toml
crates/theme/src/: colors.rs  lib.rs  style.rs
crates/wayland/: Cargo.toml
crates/wayland/src/: lib.rs
crates/widgets/: Cargo.toml
crates/widgets/src/: battery.rs  bluetooth.rs  brightness.rs  clock.rs  cpu.rs  custom.rs  disk.rs  gpu.rs  helpers.rs  keyboard.rs  lib.rs  load.rs  media.rs  memory.rs  network.rs  notify.rs  power.rs  screencast.rs  separator.rs  submap.rs  swap.rs  temperature.rs  title.rs  tray.rs  updates.rs  uptime.rs  volume.rs  workspace.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md
examples/minimal/: main.rs
src/: main.rs
