[workspace]
members = [
    "crates/core",
    "crates/config",
    "crates/theme",
    "crates/dashboard",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
rust-version = "1.80"

[workspace.dependencies]
# ── Internal crates ───────────────────────────────────────────────────────────
bar-core   = { path = "crates/core" }
bar-config = { path = "crates/config" }
bar-theme  = { path = "crates/theme" }

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio   = { version = "1", features = ["full"] }
futures = "0.3"

# ── Serialization ─────────────────────────────────────────────────────────────
serde  = { version = "1", features = ["derive"] }
toml   = "1.0"

# ── Error handling ────────────────────────────────────────────────────────────
thiserror = "2"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing = "0.1"

# ── Filesystem watching ───────────────────────────────────────────────────────
notify = "8"

# ── System info ───────────────────────────────────────────────────────────────
sysinfo = "0.38"

# ── UI / Wayland ──────────────────────────────────────────────────────────────
iced            = { version = "0.14", features = ["tokio"] }
iced_layershell = "0.15"

# ── Time ──────────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["clock"] }
