[package]
name             = "bar-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bar-core  = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
notify    = { workspace = true }
tokio     = { workspace = true }
