[package]
name             = "bar-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
notify    = { workspace = true }
tokio     = { workspace = true }
