[package]
name            = "bar-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bar-editor"
path = "src/main.rs"

[dependencies]
bar-config.workspace = true
iced.workspace       = true
toml.workspace       = true
tracing.workspace    = true
tracing-subscriber.workspace = true
