[package]
name             = "bar-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bar-editor"
path = "src/main.rs"

[dependencies]
bar-config = { workspace = true }
bar-theme  = { workspace = true }
iced       = { workspace = true }
tokio      = { workspace = true }
toml       = { workspace = true }
serde      = { workspace = true }
