[package]
name             = "bar-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bar-core   = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
