[package]
name             = "bar-powermenu"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bar-powermenu"
path = "src/main.rs"

[dependencies]
bar-config = { workspace = true }
bar-theme  = { workspace = true }
iced           = { workspace = true }
iced_layershell = { workspace = true }
tokio          = { workspace = true }
