[package]
name             = "bar-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bar-core    = { workspace = true }
bar-config  = { workspace = true }
bar-theme   = { workspace = true }
bar-system  = { workspace = true }
bar-ipc     = { workspace = true }
bar-widgets = { workspace = true }
bar-renderer = { workspace = true }
iced           = { workspace = true }
iced_layershell = { workspace = true }
tokio          = { workspace = true }
futures        = { workspace = true }
tracing        = { workspace = true }
chrono         = { workspace = true }
zbus           = { workspace = true }
serde_json     = { workspace = true }
