[package]
name             = "bar-widgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bar-core   = { workspace = true }
bar-config = { workspace = true }
bar-theme  = { workspace = true }
bar-system = { workspace = true }
iced       = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
